2015-03-20 Konstas Marmatakis marmako@gmail.com
	* tkbak.py: Small fixes.
	* tkbak.py: Change mouse cursor when loading zip or tar.gz file.
	* tkbak.py: Added message when starts the load for zip file and when is loaded.

2015-03-19 Konstas Marmatakis marmako@gmail.com
	* tkbak.py: License and Credits windows don't block the main application.
	* tkbak.py: Added iformation from files in zip and tar file (Modification, Size Compressed, Side Uncompressed, CRC).

2014-05-21 Konstas Marmatakis marmako@gmail.com
	* tkbak.py: Minor bugfixes and improvements.

2014-05-20 Konstas Marmatakis marmako@gmail.com
	* tkbak.py: Minor bugfixes.

2014-05-16 Konstas Marmatakis marmako@gmail.com
    * backup.py: Bug fixing.
    * INSTALL: Added.
    * tkbak.py: Checks in pypi for new version and informs the user.

2014-05-15 Konstas Marmatakis marmako@gmail.com
	* tkbak.py: Bug fixing in linux platform.
	* tkbak.py: Bug fixing in linux platform.
	* checkversion.py: Added.
	* setup.py: Improbements.
	
2014-05-12 Konstas Marmatakis marmako@gmail.com
	* setup.py: Improvements.
	* Renamed tkbackup to tkbak all files and strings.

2014-05-02 Konstas Marmatakis marmako@gmail.com
	* setup.py: Improvements.
	* tkbackup.desktop: Added.

2014-05-02 Konstas Marmatakis marmako@gmail.com

	* tkbackup.py: 
		Added message on loading project. 
		Added message on saving project.
		Minor bug fixes.
	* copymo.py: Added.

2014-04-30 Konstas Marmatakis marmako@gmail.com

	* setup.py: Improvements.
	* tkbackup.py: Bug fixing with opening project files, Gui.
	* Windows installer: 

2014-04-29 Konstas Marmatakis marmako@gmail.com
	
	* setup.py: Improvements.
	* cr_shortcut.py: Finished.
	* Windows installer: Ready.

2014-04-28 Konstas Marmatakis marmako@gmail.com

	* tkbackup.py: Added the ability to create project file.
	* tkbackup.py: Improvements.